--- a/client/src/components/signup/signup.css
+++ b/client/src/components/signup/signup.css
@@ -11,7 +11,7 @@
   background-size: cover;
   position: relative;
   overflow: hidden;
-  height: 100vh;
+  /* height: 100vh; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,6 +21,7 @@
   width: 500px;
   border-radius: 10px;
   padding: 30px;
+  margin: 30px;
   display: flex;
   flex-direction: column;
   background: rgba(255, 255, 255, 0.25);
