--- a/client/src/components/Home/cart.css
+++ b/client/src/components/Home/cart.css
@@ -23,6 +23,10 @@
     display: flex;
     justify-content: space-around;
 }
+.img-details img{
+ width: 40px;
+ height: 40px;
+}
 .summary{
     display: grid;
     justify-content: right;
