--- a/client/src/components/signup/signup.css
+++ b/client/src/components/signup/signup.css
@@ -11,7 +11,7 @@
   background-size: cover;
   position: relative;
   overflow: hidden;
-  /* height: 100vh; */
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
